2009-04-11  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/Makefile.am: Include src/secscanf.h in tar archive.

2009-04-11    Bernhard R. Link <brlink@debian.org>

	* configure.ac: Corrected check if "SimplePart.international" exists 
	in Xaw3D

2009-04-10  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* configure.ac: Check for presence of SIGCLD and SIGOCLD.
	If --enable-SIGCLD-fallback is given, use SIGCHLD as fallback to SIGCLD.
	
	* configure.ac: Reverted change from 2009-03-23. It breaks building
	on Mac OS X.

2009-03-23    Bernhard R. Link <brlink@debian.org>

	* configure.ac: Check if "SimplePart.international" exists in Xaw3D
	
	* several files: fixed a few compiler warnings

2009-03-23  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* configure.ac, src/versionp.h: Bumped version to 3.6.7.90

2009-03-21  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* configure.ac, src/versionp.h: Bumped version to 3.6.7

2009-03-01  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* doc/gv-update-userconfig.1: Filename as optional argument

	* src/gv-update-userconfig.in: Filename as optional argument
	
	* src/resource.c (resource_buildDatabase): Update newly introduced
	variable haveXUSERFILESEARCHPATH and resource_user_file_symb
	
	* src/resource.c (resource_checkResources): Corrected error message in
	case XUSERFILESEARCHPATH is used.

2009-02-10  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/FileSel.c (TopDirSelectionProc, SubDirSelectionProc):
	Call VlistSetFirstVisible(..., 0) to scroll list back to top position.

2009-01-16  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/callbacks.c (cb_presentation): use /usr/bin/env to find executable

2009-01-15  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/actions.c(action_shellConfigureNotify): Set Thumnb size of
	scrollbar on resize event.

2009-01-15  Bernhard R. Link <brlink@debian.org>

	* src/misc.c(setup_ghostview): Set Thumnb size of scrollbar.
