@@ -41,6 +41,7 @@ GV.scaleBase:		1
 GV.scales:		Natural	size,	1.000,	screen	\n\
 			Pixel based,	1.000,	pixel	\n\
 			Arbitrary magnification,	-2		\n\
+			Fit height to window,	-3		\n\
 			Fit width to window,	-1		\n\
 			Fit to window,	0.000		\n\
 			0.100,		0.100		\n\
