@@ -1,3 +1,12 @@
+2009-05-18  Markus Steinborn <gnugv_maintainer@yahoo.de>
+            Stefan Uhl <s.uhl@gmx.net>
+
+	* src/gv_user_res.dat: New scale "Fit height to window"
+	
+	* src/misc.c (set_new_scale): Handle "Fit height to window"-scale
+	
+	* src/main.c: likeweise, use --scale=-1003 for "fit height to window"
+
 2009-04-11  Markus Steinborn <gnugv_maintainer@yahoo.de>
 
 	* src/Makefile.am: Include src/secscanf.h in tar archive.
